# gadgents

./: .env.example  .gitignore  AGENTS.md  README.md  _wdirect.py  _wminer2.py  dev.sh  idea.md  pyproject.toml  seed_social_profile.py
backend/: _llm_post.py  _llm_post_child.py  agents.py  app.py  auth.py  billing.py  config.py  db.py  editorial.py  editorial_worker.py  llm.py  pipeline.py  router.py  url_reader.py
backend/leads/: __init__.py  agent.py  discovery.py  models.py  pipeline.py
backend/routes/: agents.py  auth.py  billing.py  brain.py  editorial.py  leadfinder.py  pipeline.py  planner.py  repurposer.py  router.py  social.py  wan.py
backend/social/: __init__.py
backend/wan/: __init__.py  camera_moves.json  prompt_builder.py
brain/.openkb/: config.yaml  hashes.json
brain/raw/: 2026-07-19-linkedin-post-by-artificial-intelligence-generative-ai-machi.md
brain/wiki/: index.md  log.md
brain/wiki/concepts/: ai-adoption-by-department.md  ai-adoption-polls.md  ai-agents-content-workflows.md  ai-enabled-business-decisions.md  ai-in-erp.md  business-central-ai-use-cases.md  curation-scope.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx  sentry.js
notes/: 00-vision-the-idea.txt  01-vision-client-agents.md  02-living-brief.md  03-content-video-production.md  04-seedance-prompting.md  05-content-monetization.md  06-session-handoff-gadgents-agents.md  07-session-handoff-gadgents-agents.md  08-social-listener-setup.md  09-social-relogin.md  10-editorial-ai-studio.md
(+10 files in other folders)
