[project]
name = "gadgents"
version = "2.0.0"
description = "Lean bot-rental product: paywalled AI agents accessible via a public frontend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
live-stripe = ["stripe>=10.0"]

[tool.setuptools]
packages = ["backend"]
